<resources>
    <string name="app_name">BodyFat</string>
    <string name="EnterName">Введите имя</string>
    <string name="cotin">Продолжить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">ЖЕН</string>
    <string name="male">МУЖ</string>
    <string name="anatationForBodyFat">
        \n Процент жира в организме — это отношение имеющегося жира ко всему остальному, что есть в теле (органам, мышцам, костям, сухожилиям и прочему). Жир необходим для выживания: он защищает внутренние органы, служит резервным источником энергии и выполняет много других важных функций.\n\n
        Если вы стремитесь быть худым, ориентируйтесь на процент жира для атлетического телосложения(жен: 13–20%, муж: 6–14%).\n\n
        Если вы хотите выглядеть здоровым и подтянутым, стремитесь к проценту жира для спортивного телосложения(жен: 20–25%, муж: 14–18%).\n\n
        *Подобные измерения не высчитывают точный процент жира в организме, этотолько примерные оценки. Проверка гидростатической плотности (гидростатическое взвешивание)— единственный метода, дающий точные результаты.
    </string>
    <string name="explanationForWorkGroup">
        I группа - работники умственного труда (руководители предприятий, медики (кроме хирургов), педагоги, научные работники, писатели, работники печатной отрасли, журналисты, студенты).\n\n
        II группа - работники легкого физического труда (рабочие автоматизированных линий, швейники, агрономы, ветеринары, медсестры, продавцы промтоваров, тренеры, инструкторы по физической культуре). \n\n
        III группа - работники среднего по тяжести труда (водители, хирурги, работники пищевой промышленности, продавцы продовольственных товаров, работники водного транспорта). \n\n
        IV группа - работники тяжелого физического труда (строители, сельхозрабочие, механизаторы, металлурги, спортсмены).\n\n
        V группа - лица особо тяжелого физического труда (сталевары, лесорубы, шахтеры, грузчики). \n\n
    </string>
    <string name="recAqua">
        Учтите, что:
        — Алкоголь, а также сладкие газированные напитки приравниваются не к жидкости, а к еде.\n
        — При некоторых заболеваниях, например, при патологии почек, гипертонии, сердечной недостаточности, врач может порекомендовать другой объем воды.\n
        — При ОРВИ и обострении инфекционных заболеваниях пить надо больше.\n
        — Кофе способствует выведению жидкости, поэтому любителям кофе рекомендуется увеличить количество выпиваемой воды.\n</string>
    <string name="endIdealWeight">
        *Идеальный (правильный) вес – понятие абстрактное, и обозначает оно усредненное значение, полученное на основе набора заданных физиологических параметров человека, таких как рост, возраст, гендерные признаки, особенности телосложения. Но состояние здоровья, уровень физической активности, процент жировой массы по отношению к мышечной и другие индивидуальные показатели отдельно взятого человека здесь не учитываются.\n\n
Это значит, что найти точное значение своего веса при помощи известных формул не удастся. Однако приблизительный ориентир, на который можно опираться при снижении или наборе массы тела получить возможно.\n\n
        Более точные показатели смотрите в рассчете процента жира в теле.
    </string>
    <string name="advice1">Для начала нужно понять в какой вы весовой категории. Возможно, у вас на данный момент идеальный вес или всего несколько лишних килограммов, а может быть вы уже страдаете от избыточной массы тела.
        \nИспользуйте наш калькулятор, чтобы вычислить свой идекс массы тела(рассчитывается при определении телосложения).
        \nНе забывайте, что и избыточный, и недостаточный вес вредит здоровью, поэтому, если ваши показатели выше или ниже нормы, по возможности обратитесь к врачу.
        \nА если ваш вес в норме, старайтесь поддерживать его, используя наши простые советы.</string>
    <string name="advice2">Многие из нас хотят максимально быстро избавиться от лишних килограммов и поэтому прибегают к жестким диетам. Но, к сожалению, это не дает желаемых результатов. Поначалу вес уходит довольно быстро, но затем так же быстро возвращается — это называется эффектом йо-йо.Отказывать себе в еде продолжительное время очень тяжело и многие просто срываются.
        \nВ такие моменты в ход идут самые вредные продукты. Наше тело как будто мстит нам за голод, который оно постоянно ощущало во время диеты. Метаболизм замедляется и его все труднее разогнать. Из-за этого мы поправляемся еще сильнее. Иногда бывает так, что до диеты человек весил меньше, чем после нее. И это неудивительно.</string>
    <string name="_8">СОБЛЮДАЯ 8 ПРОСТЫХ ПРАВИЛ, ВЫ ДОБЬЕТЕСЬ ИДЕАЛЬНОЙ ФОРМЫ ЗА КОРОТКИЙ СРОК</string>
    <string name="advice0">Поддерживать нормальный вес важно не только для того, чтобы выглядеть красиво, но и чтобы чувствовать себя здоровым. Мы расскажем как быть в форме без диет и изнурительных нагрузок. Это сможет каждый!</string>
    <string name="advice3">Фастфуд и различная замороженная продукция содержит много сахара, красителей и консервантов. Наш организм не может перерабатывать эти вещества и они преобразуются в жировые отложения.
        \nНеправильное питание нарушает гормональный баланс и лишает организм полезных веществ. Как следствие — лишний вес.
        \nГлавный секрет в достижении идеального веса — правильное питание. Не нужно отказывать себе в еде, необходимо просто есть полезные продукты. Только так вы сможете похудеть, сохранив здоровье.</string>
    <string name="advice4">Когда вы сильно голодны, идти в магазин за покупками — большая ошибка. Из-за сильного аппетита вы автоматически будете покупать больше вредных продуктов.
        \nНаш совет: если вы у вас разыгрался аппетит, сначала побалуйте себя полезной закуской, затем приготовьте список продуктов, которые вам действительно необходимы, а уже потом отправляйтесь в магазин и покупайте все строго по списку. Таким образом вы избежите импульсивных покупок.</string>
    <string name="advice5">Похудение практически невозможно без физической активности. Лучший способ избавиться от лишнего веса — сжигать калории и поддерживать мышцы в тонусе.
        \nЕсли вы будете уделять спорту всего 30 минут в день, ваши мышцы станут крепкими, кожа подтянутой, а жир будет таять на глазах. Помимо этого, вы улучшите свое самочувствие. Спорт способствует укреплению иммунитета и является профилактикой огромного количества заболеваний: диабета, онкологии, депрессии и других.
        \nЕсли нам удалось вас убедить, пора действовать!</string>
    <string name="advice6">Помимо вредных продуктов, мы часто употребляем вредные напитки, что тоже ведет к набору лишнего веса. Газированные напитки, соки, алкоголь содержат много сахара. К примеру, в 1 литре газированного напитка содержится около 110 гр чистого сахара.
        \nПоэтому, если вы хотите сбросить вес, вам нужно тщательно следить за тем, что вы пьете. Для похудения идеально подходят: вода и несладкий чай (необходимый дневной объем жидкости можно рассчитать в нашем кальтуляторе). А если вы хотите сделать напиток повкуснее, добавьте в воду мяту, лимон, малину или гранат. Это не только вкусно, но и полезно.</string>
    <string name="advice7">Лифт или лестница? Автомобиль или велосипед? Пешком или на общественном транспорте? Прогуляться или остаться на диване?
        \nТакие маленькие повседневные решения часто влияют на нашу физическую форму.
        \nТренажерный зал — не единственная возможность сбрасывать вес. На протяжении всего дня вы можете быть активным и это обязательно отразится на вашей фигуре. Так что используйте любую возможность двигаться.</string>
    <string name="advice8">Многочисленные исследования подтвердили: чем больше мы тратим времени на прием пищи, тем отчетливее получаем сигналы о насыщении, и, соответственно, меньше съедаем.
        \nАмериканские ученые обнаружили, что те, кто ест медленно, потребляют на 10% меньше калорий. Причина проста: наш мозг понимает, что мы наелись только через 15-20 минут. Именно поэтому старайтесь есть осознанно и не торопясь, тогда вы вовремя поймаете момент насыщения.
        \nС помощью этих 8 правил вы совсем скоро добьетесь желаемых результатов и сможете сохранить их надолго.
        \nЖелаем вам удачи на пути к вашему идеальному весу!</string>
</resources>