<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialogShape"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="8 ШАГОВ К ИДЕАЛЬНОЙ ФИГУРЕ"
                android:textAlignment="center"
                android:textColor="#7986CB"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textColor="#7986CB"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:paddingEnd="100dp"
                android:text="@string/advice0"
                android:textAlignment="viewStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="1. РАССЧИТАЙТЕ ПРОЦЕНТ ЖИРА В ТЕЛЕ"
                android:textAlignment="gravity"
                android:textColor="#7986CB"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice1"
                android:textAlignment="viewStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="2. ПРОЩАЙТЕ, ДИЕТЫ!"
                android:textAlignment="gravity"
                android:textColor="#7986CB"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text6"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice2"
                android:textAlignment="inherit"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="3. ОТКАЖИТЕСЬ ОТ ФАСТФУДА И ДРУГИХ ВРЕДНЫХ ПРОДУКТОВ"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text8"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice3"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text9"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="4. НИКОГДА НЕ ХОДИТЕ ЗА ПРОДУКТАМИ НА ГОЛОДНЫЙ ЖЕЛУДОК"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text10"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice4"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text11"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="5. НЕ ЗАБЫВАЙТЕ ПРО ЛЕГКУЮ ФИЗИЧЕСКУЮ НАГРУЗКУ"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text12"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice5"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text13"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="6. ПЕЙТЕ ВОДУ И ХУДЕЙТЕ"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text14"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice6"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text15"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="7. ВАЖНО КАЖДОЕ ДВИЖЕНИЕ"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text16"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice7"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/text18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text17"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans_bold"
                android:text="8. ЕШЬТЕ МЕДЛЕННО"
                android:textAlignment="gravity"
                android:textColor="@color/coolBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text18"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:text="@string/advice8"
                android:textAlignment="textStart"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>